# dla-ideal-solver

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: case1.txt  case2.txt  case3.txt  case4.txt
src/dla_ideal/: __init__.py  cli.py
src/dla_ideal/core/: __init__.py  solver.py
src/dla_ideal/io/: config_manager.py  data_handler.py
src/dla_ideal/utils/: __init__.py  logger.py  timer.py
src/dla_ideal/visualization/: animator.py
